chore(ai): small fixes and prompt/output refinements